--- a/test.html
+++ b/test.html
@@ -45,6 +45,6 @@
     <footer>
         <p>&copy; 2024 Test Platform</p>
     </footer>
-    <script src="scripts/test.js"></script>
+    <script src="test.js"></script>
 </body>
 </html>
