--- a/upload.html
+++ b/upload.html
@@ -57,7 +57,7 @@
     <footer>
         <p>&copy; 2024 Test Platform</p>
     </footer>
-    <script src="scripts/dashboard.js"></script>
+    <script src="dashboard.js"></script>
     <script>
         document.getElementById('loginForm').addEventListener('submit', function(e) {
             e.preventDefault();
