--- a/result.html
+++ b/result.html
@@ -26,6 +26,6 @@
     <footer>
         <p>&copy; 2024 Test Platform</p>
     </footer>
-    <script src="scripts/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
